# fastapi_template

./: .dockerignore  Makefile  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
app/: main.py
app/core/: logging.py  settings.py
app/db/: db_start.py
tests/: test_db.py
